syntax = "proto3";
package types.v1;
import "types/v1/types.proto";

message Nonce {
	bytes raw_bytes = 1;
}

message SignedIngress {
	bytes signature = 1;
	reserved 2;
	reserved "content";
	types.v1.UserId sender = 3;
	types.v1.CanisterId canister_id = 4;
	string method_name = 5;
	bytes arg = 6;
    	uint64 ingress_expiry = 7;
	Nonce nonce = 8;
}
